# LocalCloudGameSync

./: .gitignore  Cargo.toml  readme.md
docker_test/: Dockerfile  entrypoint.sh
scripts/: cleanup_test_container.bat  cleanup_test_container.sh  lcgsync_proton_wrapper.sh  setup_test_container.bat  setup_test_container.sh  test.sh  ui_dev.sh
scripts/steam_wrapper/: bat_wrapper_shell_hidden.vbs  lcgsync_steam_wrapper.sh  steam_sync_wrapper.bat
scripts/windows_steam/: steam_sync_wrapper.bat
src/: common.rs  lib.rs  local_head.rs  local_save_config.rs  local_save_glob.rs  main.rs  remote_lock.rs  ssh_utils.rs  sync_command.rs  tree_hash.rs  tree_utils.rs  ui.rs  utils.rs
src-ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src-ui/src/: App.css  App.tsx  ConfirmModal.tsx  ConflictDisplay.css  ConflictDisplay.tsx  ErrorDisplay.css  ErrorDisplay.tsx  LoadingDisplay.css  LoadingDisplay.tsx  RemoteEmptyDisplay.css  RemoteEmptyDisplay.tsx  SuccessDisplay.css  SuccessDisplay.tsx  global.d.ts  main.tsx
src/commands/: check_sync_command.rs  common.rs  files_command.rs  init_command.rs  mod.rs  open_config_command.rs  open_config_folder_command.rs  pull_command.rs  push_command.rs  sync_command.rs
src/config/: config_commons.rs  global_save_config.rs  local_save_config.rs  mod.rs  runtime_sync_config.rs  sync_options.rs  sync_options_validator.rs
src/remote_save_client/: mod.rs  remote_lock.rs  remote_save_client.rs
src/ui/: common.rs  mod.rs  (+7 more)
tests/: Dockerfile  integration_test.rs  remote_lock.rs  test.rs
(+36 files in other folders)
