[package]
name = "local_cloud_game_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
globset = "0.4.16"
md5 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.34.3"
wry = "0.53.4"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[dev-dependencies]
serial_test = "3.2.0"

[features]
default = []
insecure-ssh = []
